Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24327

Windows: tst_QPlainTextEdit autotest crashes

XMLWordPrintable

    • 543d994967628f580eb34d4d0241846eaef3bd7d

      tst_QPlainTextEdit::copyAvailable() test case crashes on clearing the clipboard. This is caused by warning trace which attempts to print formats of the NULL mimeData in qwindowsclipboard.cpp.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes